# OpendfsSource

./: CMakeLists.txt  LOG.md  Makefile  README.md  configure  m.sh  prepareDir.sh
data/: protoc
etc/: config.h  datanode.conf  namenode.conf  namenode.conf.default
images/: structure.drawio  绘图1.vsdx
include/leveldb/: c.h
include/phxpaxos/: Makefile  sm.h
objs/: Makefile  autoconf.err  config.h
objs_nuse/: config.h
protobuf_data/: phxeditlog.proto  readme
scripts/: make
src/cfs/: cfs.c  cfs.cpp  cfs.h  cfs_eio.c  cfs_faio.c  cfs_faio.cpp  cfs_fio.c  cfs_fio.cpp  cfs_fio.h
src/client/: dfscli_conf.cpp  dfscli_cycle.c  dfscli_cycle.cpp  dfscli_cycle.h  dfscli_get.c  dfscli_get.cpp  dfscli_get.h  dfscli_main.c  dfscli_main.cpp  dfscli_main.h  dfscli_put.c  dfscli_put.cpp  dfscli_put.h
src/common/: dfs_group.cpp  dfs_group.h  dfs_node.cpp  dfs_node.h  dfs_task.cpp  dfs_task.h  dfs_task_cmd.h  dfs_task_codec.c  dfs_task_codec.cpp  dfs_utils.cpp  dfs_utils.h  filetool.cpp  filetool.h  fs_permission.cpp
src/core/: dfs_array.cpp  dfs_buffer.cpp  dfs_chain.cpp  dfs_chain.h  dfs_channel.cpp  dfs_conf.c  dfs_conf.cpp  dfs_conf.h  dfs_conf_base.cpp  dfs_conf_base.h  dfs_conn.c  dfs_conn.cpp  dfs_conn.h  dfs_conn_listen.c  dfs_conn_listen.cpp  dfs_conn_pool.cpp  dfs_epoll.c  dfs_epoll.cpp  dfs_epoll.h  dfs_error_log.cpp  dfs_event.cpp  dfs_event.h  dfs_event_timer.c  dfs_event_timer.cpp  dfs_hashtable.c  dfs_hashtable.cpp  dfs_hashtable.h  dfs_ipc.cpp  dfs_list.cpp  dfs_mblks.cpp  dfs_memory.cpp  dfs_memory_pool.cpp  dfs_mempool_allocator.cpp  dfs_notice.cpp  dfs_shmem.cpp  dfs_slabs.cpp  dfs_string.cpp  dfs_sys.cpp  dfs_sysio.c  dfs_sysio.cpp  (+2 more)
src/datanode/: dn_conf.cpp  dn_conf.h  dn_conn_event.c  dn_conn_event.cpp  dn_cycle.cpp  dn_cycle.h  dn_data_storage.c  dn_data_storage.cpp  dn_data_storage.h  dn_error_log.cpp  dn_main.c  dn_main.cpp  dn_main.h  dn_module.c  dn_module.cpp  dn_ns_service.c  dn_ns_service.cpp  dn_process.c  dn_process.cpp  dn_process.h  dn_request.c  dn_request.cpp  dn_request.h  dn_signal.cpp  dn_thread.c  dn_thread.cpp  dn_thread.h  dn_time.cpp  dn_worker_process.c  dn_worker_process.cpp
src/faio/: faio_data_manager.c  faio_data_manager.cpp  faio_error.cpp  faio_error.h  faio_handler_manager.c  faio_handler_manager.cpp  faio_manager.c  faio_manager.cpp  faio_manager.h  faio_notifier_manager.c  faio_notifier_manager.cpp  faio_queue.h  faio_thread.c  faio_thread.cpp  faio_worker_manager.c  faio_worker_manager.cpp
src/namenode/: nn_blk_index.c  nn_blk_index.cpp  nn_blk_index.h  nn_conf.cpp  nn_conf.h  nn_conn_event.c  nn_conn_event.cpp  nn_conn_event.h  nn_cycle.c  nn_cycle.cpp  nn_cycle.h  nn_dn_index.c  nn_dn_index.cpp  nn_dn_index.h  nn_error_log.cpp  nn_error_log.h  nn_file_index.c  nn_file_index.cpp  nn_file_index.h  nn_group.cpp  nn_group.h  nn_main.c  nn_main.cpp  nn_module.c  nn_module.cpp  nn_module.h  nn_net_response_handler.c  nn_net_response_handler.cpp  nn_net_response_handler.h  nn_paxos.c  (+23 more)
(+49 files in other folders)
